Création de la structure des pages secondaires.

--- a/FilRouge2/FilRouge2.csproj
+++ b/FilRouge2/FilRouge2.csproj
@@ -119,9 +119,16 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MVVM\ViewsModel\ListOffresVM.cs" />
+    <Compile Include="MVVM\Views\ListOffresPage.xaml.cs">
+      <DependentUpon>ListOffresPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MVVM\ViewsModel\MainVM.cs" />
     <Compile Include="MVVM\Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MVVM\Views\OffrePage.xaml.cs">
+      <DependentUpon>OffrePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MVVM\ViewsModel\ViewModelBase.cs" />
@@ -146,9 +153,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="MVVM\Views\ListOffresPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MVVM\Views\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MVVM\Views\OffrePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
