--- a/FilRouge2/FilRouge2.csproj
+++ b/FilRouge2/FilRouge2.csproj
@@ -119,6 +119,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MVVM\Views\DescPreviewConverter.cs" />
     <Compile Include="MVVM\Models\FilterDataM.cs" />
     <Compile Include="MVVM\Models\OffreDataM.cs" />
     <Compile Include="MVVM\ViewsModel\ListOffresVM.cs" />
@@ -132,8 +133,11 @@
     <Compile Include="MVVM\Views\OffrePage.xaml.cs">
       <DependentUpon>OffrePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MVVM\Views\StringToVisibilityConverter.cs" />
+    <Compile Include="MVVM\ViewsModel\OffrePageVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MVVM\ViewsModel\ViewModelBase.cs" />
+    <Compile Include="MVVM\Views\StringToHyperLinkConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
