--- a/FilRouge2/FilRouge2.csproj
+++ b/FilRouge2/FilRouge2.csproj
@@ -121,7 +121,6 @@
     </Compile>
     <Compile Include="MVVM\Models\ConnectionDataM.cs" />
     <Compile Include="MVVM\Models\RegionPreferenceM.cs" />
-    <Compile Include="MVVM\ViewsModel\TryReconnectVM.cs" />
     <Compile Include="MVVM\Views\BooleanToStringConverter.cs" />
     <Compile Include="MVVM\Views\BooleanToVisibilityConverter.cs" />
     <Compile Include="MVVM\Models\FilterDataM.cs" />
@@ -138,13 +137,10 @@
       <DependentUpon>OffrePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MVVM\Views\StringToVisibilityConverter.cs" />
-    <Compile Include="MVVM\ViewsModel\OffrePageVM.cs" />
+    <Compile Include="MVVM\ViewsModel\OffreVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MVVM\ViewsModel\ViewModelBase.cs" />
     <Compile Include="MVVM\Views\StringToHyperLinkConverter.cs" />
-    <Compile Include="MVVM\Views\TryReconnectContentDialog.xaml.cs">
-      <DependentUpon>TryReconnectContentDialog.xaml</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -175,10 +171,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="MVVM\Views\OffrePage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="MVVM\Views\TryReconnectContentDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
